@@ -11,7 +11,6 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -20,17 +19,17 @@ public class ShelterController {
 
     private final ShelterService shelterService;
 
-    @PreAuthorize("hasAnyRole('ADMIN','STAFF')")
+    @PreAuthorize("hasAnyAuthority('ADMIN', 'STAFF')")
     @GetMapping
     public ResponseEntity<List<ShelterDTO>> getAllShelters() {
         List<Shelter> shelters = shelterService.findAll();
         List<ShelterDTO> shelterDTOs = shelters.stream()
                 .map(ShelterDTO::fromShelter)
-                .collect(Collectors.toList());
+                .toList();
         return new ResponseEntity<>(shelterDTOs, HttpStatus.OK);
     }
 
-    @PreAuthorize("hasAnyRole('ADMIN','STAFF')")
+    @PreAuthorize("hasAnyAuthority('ADMIN', 'STAFF')")
     @GetMapping("/{id}")
     public ResponseEntity<ShelterDTO> getShelterById(@PathVariable Long id) {
         try {
@@ -42,13 +41,13 @@ public class ShelterController {
     }
 
 
-
-    @PreAuthorize("hasAnyRole('ADMIN')")
+    @PreAuthorize("hasAnyAuthority('ADMIN')")
     @PutMapping("/{id}")
     public ResponseEntity<ShelterDTO> updateShelter(
             @PathVariable Long id,
             @RequestBody ShelterDTO shelterDTO
     ) {
+        // INFO: We didn't need any id parameters as there is only one shelter
         try {
             Shelter shelter = new Shelter(shelterDTO.name(), shelterDTO.description());
             shelterService.update(id, shelter);
@@ -56,9 +55,5 @@ public class ShelterController {
         } catch (ShelterNotFoundException e) {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
-        // INFO: We didn't need any id parameters as there is only one shelter
-//        throw new UnsupportedOperationException("Not implemented yet");
     }
-
-
 }
